# worktime

./: .gitignore  README.rst  pyproject.toml
worktime/: __main__.py  core.py
worktimething/: __main__.py  core.py  testing.py
