[tool.poetry]
name = "worktimething"
version = "0.1.7"
description = "A simple cli tool to record time spent on tasks."
readme = "README.rst"
authors = ["arjoonn sharma <arjoonn.94@gmail.com>"]
repository = "https://github.com/theSage21/worktime"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
